--- a/.config/VScode/settings.json
+++ b/.config/VScode/settings.json
@@ -3,30 +3,31 @@
   "editor.defaultFormatter": "ms-vscode.cpptools",
   "editor.fontFamily": "Fira Code",
   "editor.fontLigatures": true,
-  "git.openRepositoryInParentFolders": "never",
+  "editor.cursorStyle": "line",
+  "editor.cursorBlinking": "smooth",
   "editor.formatOnSave": true,
-  "terminal.integrated.tabs.showActiveTerminal": "singleTerminal",
-  "window.menuBarVisibility": "hidden",
-  "workbench.editor.showTabs": "single",
-  "workbench.editor.enablePreview": false,
-  "workbench.editor.decorations.badges": false,
   "editor.minimap.enabled": false,
-  "workbench.statusBar.visible": false,
   "editor.hideCursorInOverviewRuler": true,
   "editor.scrollbar.horizontal": "hidden",
   "editor.scrollbar.vertical": "hidden",
   "editor.scrollbar.verticalScrollbarSize": 0,
   "editor.glyphMargin": false,
   "editor.folding": true,
+  "workbench.editor.showTabs": "single",
+  "workbench.editor.enablePreview": false,
+  "workbench.editor.decorations.badges": false,
+  "workbench.statusBar.visible": false,
+  "workbench.colorTheme": "Visual Studio 2017 Dark - C++",
+  "workbench.activityBar.location": "hidden",
   "workbench.colorCustomizations": {
     "editorGroupHeader.border": "#6c6969",
   },
-  "terminal.integrated.defaultLocation": "editor",
-  "window.titleBarStyle": "native",
-  "workbench.colorTheme": "Visual Studio 2017 Dark - C++",
-  "terminal.integrated.enableMultiLinePasteWarning": false,
-  "workbench.activityBar.location": "hidden",
+  "window.menuBarVisibility": "hidden",
   "window.zoomLevel": 1,
+  "window.titleBarStyle": "native",
+  "terminal.integrated.tabs.showActiveTerminal": "singleTerminal",
+  "terminal.integrated.defaultLocation": "editor",
+  "terminal.integrated.enableMultiLinePasteWarning": false,
   "[java]": {
     "editor.defaultFormatter": "redhat.java"
   },
@@ -39,4 +40,5 @@
   "[jsonc]": {
     "editor.defaultFormatter": "vscode.json-language-features"
   },
+  "git.openRepositoryInParentFolders": "never",
 }
