--- a/OS/Dockerfile
+++ b/OS/Dockerfile
@@ -1,8 +1,17 @@
-FROM ubuntu 
-RUN apt update
-# RUN apt install apache2 -y
-# RUN apt install apache2-utils -y
-# RUN apt clean 
-# EXPOSE 80
-# CMD [“apache2ctl”, “-D”, “FOREGROUND”]
+FROM ubuntu:latest
 
+RUN apt-get update
+RUN apt-get upgrade -y
+RUN apt-get install apache2 -y
+RUN apt-get install nano
+
+EXPOSE 80
+
+CMD /usr/sbin/apache2ctl -D FOREGROUND
+
+
+# docker run -d \
+#   -it \
+#   --name web \
+#   --mount type=bind,source=./htdocs,target=/var/www/html \
+#   apache
