--- a/PRM/java_tp/recursion/.vscode/extensions.json
+++ b/PRM/java_tp/recursion/.vscode/extensions.json
@@ -5,12 +5,16 @@
 	"recommendations": [
 		"lfs.vscode-emacs-friendly",
 		"vscjava.vscode-java-p",
-		"donjayamanne.githistory",
+		"vscjava.vscode-java-debug",
+		"vscjava.vscode-java-pack",
+		"vscjava.vscode-java-dependency",
 		"tushortz.java-imports-snippets",
+		"vscjava.vscode-java-dependency",
 		"tushortz.java-snippets",
 		"redhat.java",
+		"vscjava.vscode-java-test",
+		"donjayamanne.githistory",
 		"yzhang.markdown-all-in-one",
-		"vscjava.vscode-java-dependency",
 		"sadeghpm.sql-snippets",
 		"bierner.markdown-mermaid",
 	],
