--- a/config/extensions.json
+++ b/config/extensions.json
@@ -17,6 +17,7 @@
 		"yzhang.markdown-all-in-one",
 		"sadeghpm.sql-snippets",
 		"bierner.markdown-mermaid",
+		"sjhuangx.vscode-scheme",
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": []
