--- a/2eme_annee/WEB/PHP_base/.vscode/settings.json
+++ b/2eme_annee/WEB/PHP_base/.vscode/settings.json
@@ -63,4 +63,7 @@
   "[html]": {
     "editor.defaultFormatter": "vscode.html-language-features"
   },
+  "[php]": {
+    "editor.defaultFormatter": "DEVSENSE.phptools-vscode"
+  },
 }
