--- a/2eme_annee/TGPR/msn/.gitignore
+++ b/2eme_annee/TGPR/msn/.gitignore
@@ -3,16 +3,14 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-.vscode
-### IntelliJ IDEA ###
-.idea/
-
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
 *.iws
+*.iml
+*.ipr
 
 ### Eclipse ###
 .apt_generated
